Alteração de estilo e criação de novas páginas

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
 }
 
 .banner-superior-home{
-    background-image: url(assets/Praça_da_Convivência_em_Detalhes-removebg-preview\ 3.png);
+    background-image: url(assets/Praça_da_Convivência_em_Detalhes-removebg-preview.png);
     background-size: cover;
     background-color: #161269;
     height: 359px;
