--- a/molderest-style.css
+++ b/molderest-style.css
@@ -22,6 +22,7 @@ body {
     font-size: 28px;
     font-style: italic;
     margin-bottom: 20px;
+    padding-top: 30px;
   }
   
   .imagem-local {
