--- a/sobrenos/sobrenos-style.css
+++ b/sobrenos/sobrenos-style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  background: linear-gradient(to bottom, #0b1220, #0e1a2e);
+  background: linear-gradient(to bottom, #161269, #161269);
   color: #f0f0f0;
   text-align: center;
 }
