--- a/lojas/molderest-style.css
+++ b/lojas/molderest-style.css
@@ -58,4 +58,30 @@ body {
     max-width: 650px;
     margin: 0 auto;
   }
+
+
+.voltar {
+
+    margin: 20px;
+
+  }
+
   
+.botao-detalhes{
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+    border-radius: 22px;
+    background-color: #161269;
+    color: #fff;
+    width: 221px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botao-voltar{
+  color: #fff;
+   text-decoration: none;
+}
