--- a/pracas/moldepracas-style.css
+++ b/pracas/moldepracas-style.css
@@ -58,4 +58,42 @@ body {
     max-width: 650px;
     margin: 0 auto;
   }
+
+  .botao-detalhes{
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+    border-radius: 22px;
+    background-color: #161269;
+    color: #fff;
+    width: 221px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botao-voltar{
+  color: #fff;
+   text-decoration: none;
+}
+
+.botao-detalhes{
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+    border-radius: 22px;
+    background-color: #161269;
+    color: #fff;
+    width: 221px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botao-voltar{
+  color: #fff;
+   text-decoration: none;
+}
   
