--- a/restaurantes/molderest-style.css
+++ b/restaurantes/molderest-style.css
@@ -59,3 +59,28 @@ body {
     margin: 0 auto;
   }
   
+  .voltar {
+
+    margin: 20px;
+
+  }
+
+  
+.botao-detalhes{
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+    border-radius: 22px;
+    background-color: #161269;
+    color: #fff;
+    width: 221px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botao-voltar{
+  color: #fff;
+   text-decoration: none;
+}
